# krkrsdl2_web

./: .gitignore  CMakeLists.txt  README.md  meson.build  meson_options.txt  plugin-compatibility-execution-steps.md  plugin-compatibility-upgrade-checklist.md  web-deploy-README.md
docker/: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  krkrsdl2.js  server.py
plugins/: CMakeLists.txt  manifest.json
plugins/shims/: addFont.js  fstat.js  json.js  menu.js
plugins/src/minimal/: Minimal.cpp
plugins/tests/: KAGParser_smoke.tjs  addFont_smoke.tjs  csvParser_smoke.tjs  extrans_smoke.tjs  fstat_smoke.tjs  json_smoke.tjs  layerExImage_smoke.tjs  menu_smoke.tjs  saveStruct_smoke.tjs  wutcwf_smoke.tjs
scripts/: configure.sh  prepare-deploy.ps1  prepare-deploy.sh  scan-game-plugins.sh  transcode_videos.py
src/config/: home.html.in  play.html.in  plugin-preload.js
src/config/src_list/kirikirisdl2/: includes.txt  sources.txt
src/core/base/sdl2/: PluginImpl.cpp
src/core/environ/sdl2/: Application.cpp
src/core/sdl2/: SDLApplication.cpp
src/core/sound/sdl2/: OpenALWaveMixer.cpp  VorbisCodecDecoder.cpp  WaveImpl.cpp
src/core/visual/sdl2/: VideoOvlImpl.cpp  VideoOvlImpl.h  WindowImpl.cpp
src/plugins/: kagparser_compat.cpp  kremscripten.cpp  menuitem_compat.cpp  tp_stub.h
tools/: server.py
